# shop

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  database.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
Docker-Postgresql/: .env  docker-compose.yml
Docker-Postgresql/bak/: .env  create_volume.bat  docker-compose.yml.bak
Docker-Postgresql/postgresql/: Dockerfile
experiments/: mt-raw.txt  mt-raw1.txt  mt.txt
migrations/: env.py
migrations/versions/: 0532b75f5def_add_foreighn_keys.py  1321bb2f0b98_current_updates.py  195e989577c1_first_run_alemdic.py  1985b3b9acc3_alchemy20.py  1ce1e186aa61_add_foreighn_keys.py  22a96622de99_add_foreighn_keys.py  248cc7b65264_add_foreighn_keys.py  24e30abec06f_add_foreighn_keys.py  2dfcadaa7ea3_first_run_alemdic.py  37677410a47c_current_updates.py  50066e9125cd_current_updates.py  5d2cd2ce4b19_current_updates.py  64f73e8aa4eb_current_updates.py  6d69ffcd4d46_first_run_alemdic.py  (+20 more)
ops/: README.md  backup.sh
scripts/: bootstrap_dev.py  fetch_geography.py
secrets/: .gitkeep
tests/: conftest.py  test_api_enroll_session.py  test_api_medical_delegated.py  test_api_medical_documents.py  test_api_medical_episodes.py  test_api_medical_session.py  test_auth.py  test_bridge.py  test_cache.py  test_challenge.py  test_consent.py  test_consent_medical_acl.py  test_db_guards.py  test_email_normalization.py  test_extract_consumer.py  test_file_store.py  test_fsm.py  test_geography_seed.py  test_i18n.py  test_interview.py  test_keyservice.py  test_medical_completeness.py  test_medical_record.py  test_medical_seed.py  test_nutrition.py  test_outbox.py  test_pool_topup.py  test_relation_service.py  test_rls.py  test_sleep.py  test_versioning.py  test_vitals.py
web/: Caddyfile  Caddyfile.app  Caddyfile.prod  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  vite.config.ts
(+897 files in other folders)
